Trying install from scratch again, now aiming to install it with mongoDB

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "co-work-api",
+  "name": "project",
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
@@ -19,15 +19,13 @@
     "strapi-plugin-users-permissions": "3.1.3",
     "strapi-plugin-email": "3.1.3",
     "strapi-plugin-upload": "3.1.3",
-    "strapi-connector-bookshelf": "3.1.3",
-    "knex": "<0.20.0",
-    "sqlite3": "latest"
+    "strapi-connector-mongoose": "3.1.3"
   },
   "author": {
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "78a75da5-b3e2-4dab-b49d-b85893ad847c"
+    "uuid": "cb25a334-afa5-4f7f-bfb3-62accfcc28c6"
   },
   "engines": {
     "node": ">=10.0.0",
