--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project",
+  "name": "my-strapi",
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
@@ -25,7 +25,7 @@
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "cb25a334-afa5-4f7f-bfb3-62accfcc28c6"
+    "uuid": "ba59f950-de69-478c-a3e6-ad979e37cdd0"
   },
   "engines": {
     "node": ">=10.0.0",
