Added membership attribute to User and updated Reservation

--- a/api/reservation/models/reservation.settings.json
+++ b/api/reservation/models/reservation.settings.json
@@ -19,9 +19,9 @@
       "type": "datetime"
     },
     "user": {
+      "via": "reservations",
       "plugin": "users-permissions",
-      "model": "user",
-      "via": "reservations"
+      "model": "user"
     }
   }
 }
