--- a/api/workspace/models/workspace.settings.json
+++ b/api/workspace/models/workspace.settings.json
@@ -15,6 +15,26 @@
     },
     "description": {
       "type": "richtext"
+    },
+    "avatar": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false
+    },
+    "mealTray": {
+      "type": "boolean"
+    },
+    "WiFi": {
+      "type": "boolean"
+    },
+    "unlimitedDrinks": {
+      "type": "boolean"
     }
   }
 }
