--- a/extensions/users-permissions/models/User.settings.json
+++ b/extensions/users-permissions/models/User.settings.json
@@ -60,8 +60,8 @@
       "type": "string"
     },
     "reservations": {
-      "collection": "reservation",
-      "via": "user"
+      "via": "user",
+      "collection": "reservation"
     },
     "membership": {
       "type": "enumeration",
