--- a/api/workspace/models/workspace.settings.json
+++ b/api/workspace/models/workspace.settings.json
@@ -35,6 +35,15 @@
     },
     "unlimitedDrinks": {
       "type": "boolean"
+    },
+    "meeting_rooms": {
+      "collection": "meeting-room"
+    },
+    "location": {
+      "type": "string"
+    },
+    "cozy_louges": {
+      "collection": "cozy-louge"
     }
   }
 }
