--- a/api/meeting-room/models/meeting-room.settings.json
+++ b/api/meeting-room/models/meeting-room.settings.json
@@ -9,8 +9,11 @@
     "timestamps": true
   },
   "attributes": {
-    "MeetingRoomID": {
-      "type": "uid"
+    "meetingRoomName": {
+      "type": "string"
+    },
+    "bookings": {
+      "collection": "reservation"
     }
   }
 }
