--- a/extensions/users-permissions/models/User.settings.json
+++ b/extensions/users-permissions/models/User.settings.json
@@ -59,10 +59,6 @@
     "LastName": {
       "type": "string"
     },
-    "reservations": {
-      "via": "user",
-      "collection": "reservation"
-    },
     "membership": {
       "type": "enumeration",
       "enum": [
@@ -70,6 +66,10 @@
         "simple",
         "resident"
       ]
+    },
+    "booking": {
+      "via": "user",
+      "model": "reservation"
     }
   }
 }
