--- a/extensions/users-permissions/models/User.settings.json
+++ b/extensions/users-permissions/models/User.settings.json
@@ -70,6 +70,9 @@
     "booking": {
       "via": "user",
       "model": "reservation"
+    },
+    "admin": {
+      "type": "boolean"
     }
   }
 }
