--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "strapi-connector-mongoose": "3.1.3",
     "strapi-plugin-content-manager": "3.1.3",
     "strapi-plugin-content-type-builder": "3.1.3",
+    "strapi-plugin-documentation": "3.1.3",
     "strapi-plugin-email": "3.1.3",
     "strapi-plugin-upload": "3.1.3",
     "strapi-plugin-users-permissions": "3.1.3",
