--- a/api/room/models/room.settings.json
+++ b/api/room/models/room.settings.json
@@ -13,8 +13,8 @@
       "type": "string"
     },
     "bookings": {
-      "collection": "booking",
-      "via": "room"
+      "via": "room",
+      "collection": "booking"
     },
     "roomType": {
       "type": "enumeration",
